# siutindei

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md
backend/: pyproject.toml  requirements.txt
backend/db/: README.md  alembic.ini
backend/db/alembic/: env.py  script.py.mako
backend/db/alembic/versions/: 0001_initial_schema.py  0002_add_iam_db_user.py  0003_add_admin_db_user.py  0004_add_organization_pictures.py  (+28 more)
backend/db/seed/: seed_data.sql
backend/infrastructure/: .checkov.yaml  cdk.json  package-lock.json  package.json  tsconfig.json
backend/infrastructure/lib/: admin-web-stack.ts  api-stack.ts  public-www-stack.ts  waf-stack.ts
backend/infrastructure/params/: README.md  production.json
backend/infrastructure/scripts/: assert-existing-db.ts  patch-bundled-minimatch.js
backend/lambda/access_request_processor/: handler.py
backend/lambda/activity_search/: handler.py
backend/lambda/admin/: handler.py
backend/lambda/admin_bootstrap/: handler.py
backend/lambda/api_key_rotation/: handler.py
backend/lambda/authorizers/: _common.py
backend/lambda/aws_proxy/: handler.py
backend/lambda/cognito_admin/: handler.py
backend/lambda/health/: handler.py
backend/lambda/manager_request_processor/: handler.py
backend/lambda/migrations/: __init__.py  handler.py  runner.py  secrets.py  seed.py  sync.py  utils.py
backend/lambda/search/: handler.py
backend/scripts/: build_lambda_bundle.py  prepare_infra_synth_env.sh  run-cdk-app.sh
backend/src/app/: __init__.py  exceptions.py
(+602 files in other folders)
