[project]
name = 'siutindei-backend'
version = '0.1.0'
description = 'Backend services and Lambda handlers'
requires-python = '>=3.12'

[project.optional-dependencies]
dev = [
  'pytest>=8.0',
  'pytest-cov>=5.0',
]

[tool.ruff]
line-length = 80
target-version = 'py312'
src = ['src', 'lambda']

[tool.ruff.lint]
select = ['E', 'F', 'I', 'B']
ignore = ['E501', 'B904']

[tool.pytest.ini_options]
testpaths = ['../tests', 'tests']
python_files = ['test_*.py']
addopts = '-ra'

[tool.mypy]
python_version = '3.12'
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = '(db/alembic/versions/|scripts/)'
